New in spot 2.10.6.dev  (not yet released)

  Command-line tools:

  - autfilt has a new options --aliases=drop|keep to specify
    if the output code should attempt to preserve aliases
    present in the HOA input.  This defaults to "keep".

  - autfilt has a new --to-finite option, illustrated on
    https://spot.lrde.epita.fr/tut12.html

  - ltlfilt has a new --sonf option to produce a formula's Suffix
    Operator Normal Form, described in [cimatti.06.fmcad].  The
    associated option --sonf-aps allows listing the newly introduced
    atomic propositions.

  - autcross learned a --language-complemented option to assist in the
    case one is testing tools that complement automata.  (issue #504).

  - ltlsynt as a new option --tlsf that takes the filename of a TLSF
    specification and calls syfco (which must be installed) to convert
    it into an LTL formula.

  Library:

  - A global variable, together with its setters and getters to define the
    maximal number of threads is added to common.hh/common.cc

  - The new function suffix_operator_normal_form() implements
    transformation of formulas to Suffix Operator Normal Form,
    described in [cimatti.06.fmcad].

  - "original-classes" is a new named property similar to
    "original-states".  It maps an each state to an unsigned integer
    such that if two classes are in the same class, they are expected
    to recognize the same language.  The "original-states" should be
    prefered property when that integer correspond to some actual
    state.

  - tgba_determinize() learned to fill the "original-classes" property.
    States of the determinized automaton that correspond to the same
    subset of states of the original automaton belong to the same
    class.  Filling this property is only done on demand has it inccurs
    on small overhead.

  - sbacc() learned to take the "original-classes" property into
    account and preserve it.
